# LLM_Benchmarking_Application

./: .gitignore  README.md  pyproject.toml  sample_secrets.toml
prototyping/: Database.ipynb  DropDown Dashboard.py  Streamlit cloud Cache folder test.py  dbconnection_pycog2.ipynb  gaia-test.csv  gaia-validation.csv  metrics.ipynb  openai_tool_backend.ipynb  tool_access.py
scripts/: architecure_diagram.py  gcp_bucket_upload.py  load_data_to_sql.py
scripts/terraform/: main.tf  schema.sql  sql.tf
src/: GAIA.py  main.py  metrics.py
src/data_layer/: data_access.py  models.py  object_store.py
src/pages/: 1_LLM_Prompting.py  2_Dashboard.py
src/utils/: gpt.py  tools.py
